Removed inline style from HomePage setting the height of the classifications block, added it to the stylesheet at a smaller value, though still fixed. This will fix the desert of white space at the bottom of the page. (Ticket #70838)

--- a/src/DVN-web/web/resources/stylesheet.css
+++ b/src/DVN-web/web/resources/stylesheet.css
@@ -266,6 +266,7 @@ span.disabled {font-weight: bold;}
 .iceTreeRow .icePnlGrp {display: inline;}
 .dvnTreeBlock {
   width: 100%;
+  height: 36em;
   padding: 0; border: 0;
   text-align: left;
 }
